--- a/random.html
+++ b/random.html
@@ -9,41 +9,45 @@
 
     <body>
 <script language=javascript>
-id=Math.round(Math.random()*5)+1
+id=Math.round(Math.random()*11)+1
 document.write("<img src="+id+".jpg>");
 document.write("</br>");
-document.write(" 你本次抽到的是"+id);
-document.write("</br>");
-if(id==1){
-                 document.write('1');
-             }
-else if(id==2){
-                 document.write('2');
-             }
-else if(id==3){
-                 document.write('3');
-             }
-else if(id==4||id==5){
-                 document.write('4|5');
-             }
-else{
-                 document.write('啥别说了，我懂，中午下馆子')
-}
 
 if(id==1){
-                 document.write('<p cols="20" id="biao1">要复制的文字1</p>');
-             }
+    document.write('<p cols="20" id="biao1">你抽到的是"1 纷争平原" ;</br> 欢迎使用我的随机选图 http://XXXXXXXXXXXXXXXXXXXXXXX</p>');
+}
 else if(id==2){
-                 document.write('<p cols="20" id="biao1">要复制的文字2</p>');
-             }
+    document.write('<p cols="20" id="biao1">你抽到的是"2 西风哨站" ;</br> 欢迎使用我的随机选图 http://XXXXXXXXXXXXXXXXXXXXXXX</p>');
+}
 else if(id==3){
-                 document.write('<p cols="20" id="biao1">要复制的文字3</p>');
-             }
-else if(id==4||id==5){
-                 document.write('<p cols="20" id="biao1">要复制的文字4 5</p>');
-             }
+    document.write('<p cols="20" id="biao1">你抽到的是"3 海角之泪" ;</br> 欢迎使用我的随机选图 http://XXXXXXXXXXXXXXXXXXXXXXX</p>');
+}
+else if(id==4){
+    document.write('<p cols="20" id="biao1">你抽到的是"4 沙漠之眼" ;</br> 欢迎使用我的随机选图 http://XXXXXXXXXXXXXXXXXXXXXXX</p>');
+}
+else if(id==5){
+    document.write('<p cols="20" id="biao1">你抽到的是"5 空中庭院" ;</br> 欢迎使用我的随机选图 http://XXXXXXXXXXXXXXXXXXXXXXX</p>');
+}
+else if(id==6){
+    document.write('<p cols="20" id="biao1">你抽到的是"6 双桥逆波" ;</br> 欢迎使用我的随机选图 http://XXXXXXXXXXXXXXXXXXXXXXX</p>');
+}
+else if(id==7){
+    document.write('<p cols="20" id="biao1">你抽到的是"7 凛冬栖地" ;</br> 欢迎使用我的随机选图 http://XXXXXXXXXXXXXXXXXXXXXXX</p>');
+}
+else if(id==8){
+    document.write('<p cols="20" id="biao1">你抽到的是"8 溶光洞窟" ;</br> 欢迎使用我的随机选图 http://XXXXXXXXXXXXXXXXXXXXXXX</p>');
+}
+else if(id==9){
+    document.write('<p cols="20" id="biao1">你抽到的是"9 破碎断崖" ;</br> 欢迎使用我的随机选图 http://XXXXXXXXXXXXXXXXXXXXXXX</p>');
+}
+else if(id==10){
+    document.write('<p cols="20" id="biao1">你抽到的是"10 溪流秘谷" ;</br> 欢迎使用我的随机选图 http://XXXXXXXXXXXXXXXXXXXXXXX</p>');
+}
+else if(id==11){
+    document.write('<p cols="20" id="biao1">你抽到的是"11 残舰隘口" ;</br> 欢迎使用我的随机选图 http://XXXXXXXXXXXXXXXXXXXXXXX</p>');
+}
 else{
-                 document.write('<p cols="20" id="biao1">要复制的文字6</p>');
+    document.write('<p cols="20" id="biao1">你抽到的是"12 熔硫地心" ;</br> 欢迎使用我的随机选图 http://XXXXXXXXXXXXXXXXXXXXXXX</p>');
 }
 
 </script>
@@ -63,15 +67,7 @@ else{
         }
 </script>
 <button id="copy-btn" onClick="copyUrl2()">复制</button>
-<button onClick="window.location.reload();">Refresh Page</button>
-<button type="button" onClick="refreshPage()">刷新</button>
-
-
-<script>
-function refreshPage(){
-    window.location.reload();
-} 
-</script>
+<button onClick="window.location.reload();">刷新重抽</button>
     </body>
 </html>
 
